# AMDIS

./: pyproject.toml  readme.md
microbiome/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  test_local.py
microbiome/server/: Dockerfile  __init__.py  app.py  microbiome_environment.py
